# 1.0.0

* Remove deprecated convertUnderline option.

* Officially support ID prefixes.

* Generated IDs no longer insert a hyphen after the ID prefix.

* The default ID prefix is now the empty string rather than a random number
  followed by a hyphen.

# 0.3.33

* Improve collapsing of elements when there are empty elements.

# 0.3.32

* Allow bold and italic style mappings to be configured.

# 0.3.31

* Handle references to missing styles when reading documents.

# 0.3.30

* Improve support for lists made in LibreOffice. Specifically, this changes the
  default style mapping for paragraphs with a style of "Normal" to have the
  lowest precedence.

* Replace nomnom with argparse for CLI argument parsing. Usage should be the
  same, but unknown arguments will now cause an exit with failure rather than
  being ignored.

# 0.3.29

* Always use mc:Fallback when reading mc:AlternateContent elements.

# 0.3.28

* Avoid inserting newlines around inline elements when pretty-printing HTML.

* CLI: print warnings to stderr.

* Read v:imagedata with r:id attribute.

* Read children of v:roundrect.

* Ignore office-word:wrap, v:shadow and v:shapetype.

# 0.3.27

* Fix recursive collapsing of elements.

# 0.3.26

* Keep HTML elements open correctly when the HTML path contains no fresh
  element.

* Collapse similar non-fresh HTML elements together.

* Don't escape double quotes outside of attributes.

# 0.3.25

* When the styleMap option is passed as a string, ignore lines beginning with #.

* Generate warnings for not-understood style mappings and continue, rather than
  stopping with an error.
  
* Add support for embedded style maps.

* Add support for linked images.

# 0.3.24

* Ignore w:numPr elements without w:numId or w:ilvl children.

# 0.3.23

* Support links and images in footnotes and endnotes.

# 0.3.22

* Add support for underlines in style map.

* Add support for strikethrough.

# 0.3.21
