@@ -159,7 +159,7 @@ function DocumentConversion(options) {
         }
     }
     
-    var defaultConvertImage = images.inline(function(element) {
+    var defaultConvertImage = images.imgElement(function(element) {
         return element.read("base64").then(function(imageBuffer) {
             return {
                 src: "data:" + element.contentType + ";base64," + imageBuffer
