@@ -1,10 +1,12 @@
+var _ = require("underscore");
+
 var promises = require("./promises");
 var Html = require("./html");
 
-exports.inline = function(func) {
+exports.imgElement = function(func) {
     return function(element, messages, callback) {
         return promises.when(func(element)).then(function(result) {
-            var attributes = {src: result.src};
+            var attributes = _.clone(result);
             if (element.altText) {
                 attributes.alt = element.altText;
             }
@@ -14,3 +16,6 @@ exports.inline = function(func) {
         }, callback);
     };
 };
+
+// Undocumented, but retained for backwards-compatibility with 0.3.x
+exports.inline = exports.imgElement;
