@@ -22,7 +22,7 @@ function main(argv) {
             var basename = path.basename(docxPath, ".docx");
             outputPath = path.join(outputDir, basename + ".html");
             var imageIndex = 0;
-            options.convertImage = images.inline(function(element) {
+            options.convertImage = images.imgElement(function(element) {
                 imageIndex++;
                 var extension = element.contentType.split("/")[1];
                 var filename = imageIndex + "." + extension;
